--- a/Fase 2/Modulo 2/1 - Primeiro Projeto com HTML e CSS/index.html
+++ b/Fase 2/Modulo 2/1 - Primeiro Projeto com HTML e CSS/index.html
@@ -5,8 +5,13 @@
   <meta charset="UTF-8">
   <title>Daniel Azevêdo</title>
   <style>
+  
     body {
-      background-color: #282a36;
+      background: #282a36;
+      color: white;
+    }
+
+    h1 {
       color: white;
     }
   </style>
@@ -16,4 +21,4 @@
   <h1> Hello World</h1>
 </body>
 
-</html>
+</html> 
