--- a/Fase 2/Modulo 2/2 - Menu do site/index.html
+++ b/Fase 2/Modulo 2/2 - Menu do site/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Daniel Azevêdo</title>
     <style>
+        *{
+            margin: 0
+        }
         body {
             background: #282a36;
             color: white;
@@ -12,6 +15,9 @@
 
         h1 {
             color: white;
+        }
+        header{
+            padding: 32px
         }
 
         .menu a {
