--- a/Fase 2/Modulo 2/2 - Menu do site/Desafio/index.html
+++ b/Fase 2/Modulo 2/2 - Menu do site/Desafio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <title >Rocketseat</title>
