--- a/Fase 2/Modulo 2/7 - Video dinâmico/classes.html
+++ b/Fase 2/Modulo 2/7 - Video dinâmico/classes.html
@@ -26,7 +26,7 @@
 
     <section class="cards">
 
-        <div class="card">
+        <div class="card" id="k5TkBcUTJus">
 
             <div class="card__image-container">
                 <img src="https://img.youtube.com/vi/k5TkBcUTJus/0.jpg" alt="">
@@ -41,7 +41,8 @@
                 <p class="card__price">Free</p>
             </div>
         </div>
-        <div class="card">
+
+        <div class="card" id="hka7ay9F1kk">
 
             <div class="card__image-container">
                 <img src="https://img.youtube.com/vi/hka7ay9F1kk/0.jpg" alt="">
@@ -56,7 +57,8 @@
                 <p class="card__price">Free</p>
             </div>
         </div>
-        <div class="card">
+
+        <div class="card" id="5MP6hmdEvJo">
 
             <div class="card__image-container">
                 <img src="https://img.youtube.com/vi/5MP6hmdEvJo/0.jpg" alt="">
@@ -71,7 +73,7 @@
                 <p class="card__price">Free</p>
             </div>
         </div>
-        <div class="card">
+        <div class="card" id="HN1UjzRSdBk">
 
             <div class="card__image-container">
                 <img src="https://img.youtube.com/vi/HN1UjzRSdBk/0.jpg" alt="">
@@ -87,7 +89,7 @@
                 <p class="card__price">Free</p>
             </div>
         </div>
-        <div class="card">
+        <div class="card" id="2alg7MQ6_sI">
 
             <div class="card__image-container">
                 <img src="https://img.youtube.com/vi/2alg7MQ6_sI/0.jpg" alt="">
@@ -102,8 +104,8 @@
                 <p class="card__price">R$:19,99</p>
             </div>
         </div>
-        <div class="card">
-
+        
+        <div class="card" id="vqrjFnq3">
             <div class="card__image-container">
                 <img src="https://img.youtube.com/vi/vqrjFnq3-uo/0.jpg" alt="">
             </div>
@@ -125,8 +127,10 @@
            <a class="close-modal">
                <i class="material-icons">close</i>
            </a>
+
+
            <div class="modal-content">
-                 <iframe src="https://youtube.com/embed/vqrjFnq3-uo" frameborder="0"></iframe>
+                 <iframe src="https://youtube.com/embed/" frameborder="0"></iframe>
             </div>
        </div>
       
